--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
 
 
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="./assets/script/jquery-1.11.2.min.js"></script>
     <script src="./assets/script/slick/slick.min.js"></script>
     <script src="./assets/script/main.js"></script>
 
