--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="./assets/script/slick/slick-theme.css">
     <link rel="stylesheet" href="./assets/script/slick/slick.css">
-
+    <link rel="icon" href="./assets/images/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
     <header>
 
         <div class="container">
-           <a href="#" class="logo">
+           <a href="index.html" class="logo">
                 <img src="./assets/images/logo.png" alt="">
                 <h1 class="title">Релакс</h1>
             </a>
@@ -42,7 +42,7 @@
                     <a href="hotel.html">Гостиница</a>
                 </li>
                 <li class="nav__element">
-                    <a href="">Сауна</a>
+                    <a href="sauna.html">Сауна</a>
                 </li>
                 <li class="nav__element">
                     <a href="">Контакты</a>
@@ -78,7 +78,10 @@
                 
     
                         <!-- MAP -->
-                <h1 class="head-title">Карта</h1>
+                <div class="head-title">
+                    <h1>Карта</h1>
+                    <hr>
+                </div>
                 <div class="map">
                     <div class="map__social-networks">
                         <a href="#" class="link">
