--- a/sauna.html
+++ b/sauna.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="./assets/script/slick/slick-theme.css">
     <link rel="stylesheet" href="./assets/script/slick/slick.css">
-
+    <link rel="icon" href="./assets/images/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
