update phone number

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="banner_text">
                     <div class="banner__text-block">
                         <h3>Гостиница</h3>
-                        <p>8(423)-233-99-91</p>
+                        <p><a href="tel:+74232339991">8(423)-233-99-91</a></p>
                         <p>8(964)-443-21-17</p>
                     </div>
                     <div class="banner__text-block">
