--- a/contacts.html
+++ b/contacts.html
@@ -65,13 +65,13 @@
                     <div class="contacts">
                         <div class="block">
                             <h3>Телефон гостиницы</h3>
-                            <p>8 (423) 233-99-91</p>
-                            <p>8 (964) 443-21-17</p>
+                            <p><a href="tel:+74232339991">8(423)-233-99-91</a></p>
+                            <p><a href="tel:+79644432117">8(964)-443-21-17</a></p>
                         </div>
                         <div class="block">
                             <h3>Телефон сауны</h3>
-                            <p>8 (423) 233-65-03</p>
-                            <p>8 (994)-105-01-61</p>
+                            <p><a href="tel:+74232336503">8(423)-233-65-03</a></p>
+                            <p><a href="tel:+79941050161">8(994)-105-01-61</a></p>
                          </div>
                     </div>
                 </div>
