--- a/hotel.html
+++ b/hotel.html
@@ -66,7 +66,6 @@
 
                 <div class="hotel-preview">
                     <p class="hotel-preview__text">
-
                         Компания Релакс - это уют и комфорт. Гостиница расположена в отдельно стоящем здании в тихом районе города.
                         <br><br>
                         На ваш выбор номера:<br>
@@ -255,8 +254,8 @@
                     </div>
                     <div class="block">
                         <h3 class="title">Оставьте заявку по номеру</h3>
-                        <p class="number">8(423)-233-99-91</p>
-                        <p class="number">8(964)-443-21-17</p>
+                        <p class="number"><a href="tel:+74232339991">8(423)-233-99-91</a></p>
+                        <p class="number"><a href="tel:+79644432117">8(964)-443-21-17</a></p>
                         <h3 class="title">Или напишите нам в мессенджеры</h3>
                         <a href="#" class="link">
                             <img src="./assets/images/icons/telegram.png" alt="">
