--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                     <div class="banner__text-block">
                         <h3>Гостиница</h3>
                         <p><a href="tel:+74232339991">8(423)-233-99-91</a></p>
-                        <p>8(964)-443-21-17</p>
+                        <p><a href="tel:+79644432117">8(964)-443-21-17</a></p>
                     </div>
                     <div class="banner__text-block">
                         <h3>Сауна</h3>
-                        <p>8(423)-233-65-03</p>
-                        <p>8 (994)-105-01-61</p>
+                        <p><a href="tel:+74232336503">8(423)-233-65-03</a></p>
+                        <p><a href="tel:+79941050161">8(994)-105-01-61</a></p>
                     </div>
                 </div>
-    
+                <!-- <a href="tel:+"></a> -->
             </div>
     
                         <!-- ABOUT US -->
@@ -324,13 +324,13 @@
             <div class="footer__contacts">
                 <div class="block">
                    <h3 class="title">Гостиница</h3>
-                    <p class="number">8(423)-233-99-91</p>
-                    <p class="number">8(964)-443-21-17</p> 
+                    <p class="number"><a href="tel:+74232339991">8(423)-233-99-91</a></p>
+                    <p class="number"><a href="tel:+79644432117">8(964)-443-21-17</a></p> 
                 </div>
                 <div class="block">
                     <h3 class="title">Сауна</h3>
-                     <p class="number">8(423)-233-65-03</p>
-                     <p class="number">8 (994)-105-01-61</p> 
+                     <p class="number"><a href="tel:+74232336503">8(423)-233-65-03</a></p>
+                     <p class="number"><a href="tel:+79941050161">8(994)-105-01-61</a></p> 
                  </div>
             </div>
         </div>
