--- a/sauna.html
+++ b/sauna.html
@@ -141,8 +141,8 @@
                         </div>
                         <div class="about-sauna__text">
                             <h3>Оставьте заявку по номеру</h3>
-                            <p class="number">8(994)-105-01-61</p>
-                            <p class="number">8(423)-233-65-03</p>
+                            <p class="number"><a href="tel:+79941050161">8(994)-105-01-61</a></p>
+                            <p class="number"><a href="tel:+74232336503">8(423)-233-65-03</a></p>
                             <h3>Или напишите нам в мессенджеры</h3>
                             <div class="social-networks">
                                 <a href="#" class="link">
@@ -187,22 +187,22 @@
     </div> <!-- END PAGE -->
     
                     <!-- FOOTER -->
-    <footer>
-        <div class="container">
-            <div class="footer__contacts">
-                <div class="block">
-                   <h3 class="title">Гостиница</h3>
-                    <p class="number">8(423)-233-99-91</p>
-                    <p class="number">8(964)-443-21-17</p> 
-                </div>
-                <div class="block">
-                    <h3 class="title">Сауна</h3>
-                     <p class="number">8(423)-233-65-03</p>
-                     <p class="number">8 (994)-105-01-61</p> 
-                 </div>
-            </div>
-        </div>
-    </footer>
+                    <footer>
+                        <div class="container">
+                            <div class="footer__contacts">
+                                <div class="block">
+                                   <h3 class="title">Гостиница</h3>
+                                    <p class="number"><a href="tel:+74232339991">8(423)-233-99-91</a></p>
+                                    <p class="number"><a href="tel:+79644432117">8(964)-443-21-17</a></p> 
+                                </div>
+                                <div class="block">
+                                    <h3 class="title">Сауна</h3>
+                                     <p class="number"><a href="tel:+74232336503">8(423)-233-65-03</a></p>
+                                     <p class="number"><a href="tel:+79941050161">8(994)-105-01-61</a></p> 
+                                 </div>
+                            </div>
+                        </div>
+                    </footer>
 
 
 
